manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: password-check
  namespace: treinamento-microservices
  labels:
    app: password-check
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api.domain.com.br
    secretName: tls-4linux
  rules:
  - host: api.domain.com.br
    http:
      paths:
      - path: /password-check(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: password-check-svc
            port:
              number: 5000
